deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaple-server
  labels:
    app: gaple-server
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: ws
  selector:
    app: gaple-server
